--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "action",
   "version": "2.0.2",
   "scripts": {
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src --ext .ts --max-warnings=0",
     "test": "mocha --require ts-node/register src/test/**/*.spec.ts",
     "build": "tsc",
     "release": "ncc build src/main/index.ts"
