--- a/package.json
+++ b/package.json
@@ -8,26 +8,29 @@
     "release": "ncc build src/main/index.ts"
   },
   "dependencies": {
-    "uuid": "8.3.2",
-    "@ionos-deploy-now/actions-core": "^1.0.3",
-    "@actions/core": "1.10.0",
-    "@actions/github": "5.1.1"
+    "@actions/core": "1.10.1",
+    "@actions/github": "6.0.0",
+    "@ionos-deploy-now/actions-core": "1.1.0",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
-    "typescript": "4.7.4",
-    "@vercel/ncc": "0.34.0",
-    "@types/node": "18.0.6",
-    "@ionos-deploy-now/eslint-config-actions": "1.0.0",
-    "@ionos-deploy-now/prettier-config-actions": "1.0.0",
-    "mocha": "^10.0.0",
-    "@types/mocha": "^9.1.1",
+    "@ionos-deploy-now/eslint-config-actions": "^1.1.0",
+    "@ionos-deploy-now/prettier-config-actions": "^1.1.0",
+    "@types/chai": "^4.3.16",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "20.14.2",
+    "@types/sinon": "^17.0.3",
+    "@vercel/ncc": "0.38.1",
     "chai": "^4.3.6",
-    "@types/chai": "^4.3.1",
     "chai-as-promised": "^7.1.1",
-    "@types/chai-as-promised": "^7.1.5",
-    "ts-node": "^10.9.1",
-    "sinon": "^14.0.0",
+    "mocha": "^10.0.0",
+    "sinon": "^18.0.0",
+    "ts-node": "^10.9.2",
     "ts-sinon": "^2.0.2",
-    "@types/sinon": "^10.0.13"
+    "typescript": "5.4.5"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
