--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.3",
   "scripts": {
     "lint": "eslint src --ext .ts --max-warnings=0",
+    "lint:fix": "eslint src --ext .ts --max-warnings=0 --fix",
     "test": "mocha --require ts-node/register src/test/**/*.spec.ts",
     "build": "tsc",
     "release": "ncc build src/main/index.ts"
