--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,7 +43,7 @@ jobs:
           tagging_message: v${{ inputs.version }}
       - if: inputs.update-major-tag
         name: Update major version tag
-        uses: actions/github-script@v3
+        uses: actions/github-script@v7
         env:
           VERSION: ${{ inputs.version }}
           SHA: ${{ steps.commit-step.outputs.commit_hash }}
@@ -56,7 +56,7 @@ jobs:
               return
             }
             try {
-                await github.git.deleteRef({
+                await github.rest.git.deleteRef({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   ref: "tags/" + tag
@@ -64,7 +64,7 @@ jobs:
             } catch (e) {
               console.log("The tag " + tag + " doesn't exist yet.")
             }
-            await github.git.createRef({
+            await github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
               ref: "refs/tags/" + tag,
